@@ -9,11 +9,6 @@ struct mirror_t {
 	char *root;
 };
 
-/* This is the codename of the preferred distribution; the one that the
- * current version of d-i is targeted at installing. This can be removed
- * once /etc/default_release is fully deployed. */
-#define PREFERRED_DISTRIBUTION "lenny"
-
 /* The string defined below must match the string used in the templates
  * (http and ftp) for this option. */
 #define MANUAL_ENTRY "manual"
@@ -26,7 +21,6 @@ struct mirror_t {
 /* Stack of suites */
 static const char suites[][SUITE_LENGTH] = {
 	/* higher preference */
-	PREFERRED_DISTRIBUTION,
 	"stable",
 	"testing",
 	"unstable"
