@@ -4,8 +4,9 @@ choose-mirror (2.24) UNRELEASED; urgency=low
     - iso3166tab.py: Include ErrorPrinter and DefaultHandler from obsolete
       saxutils.py
     - drop build dependency on python-xml
+  * Remove PREFERRED_DISTRIBUTION; has been replaced by /etc/default_release.
 
- -- Frans Pop <fjp@debian.org>  Wed, 12 Mar 2008 17:47:46 +0100
+ -- Frans Pop <fjp@debian.org>  Mon, 17 Mar 2008 00:19:16 +0100
 
 choose-mirror (2.23) unstable; urgency=low
 
